monitoring/ingress/ingressroute-public-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-public-redirect
  namespace: monitoring
spec:
  redirectRegex:
    regex: "^https://stats.khider.fr/?$"
    replacement: "https://stats.khider.fr/public-dashboards/5baf3b74b50f44acb3a0ff265f9304d4"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-public-ingress-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`stats.khider.fr`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
      middlewares:
        - name: grafana-public-redirect
  tls:
    secretName: dashboard-cert
